--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
   <form>
     <div class="form-control">
       <label for="student-name">Name:</label>
-      <input type="text" name="name" id="student-name" placeholder="Enter your name" class="required" value="Vardas">
+      <input type="text" name="name" id="student-name" placeholder="Enter your name" class="required">
     </div>
     <div>
       <label for="student-surname">Surname:</label>
-      <input type="text" name="surname" id="student-surname" placeholder="Enter your surname" class="required" value="Pavarde">
+      <input type="text" name="surname" id="student-surname" placeholder="Enter your surname" class="required">
     </div>
     <div>
       <label for="student-age">Age:</label>
-      <input type="number" name="age" id="student-age" placeholder="Enter your age" min="18" max="120" class="required" value="30">
+      <input type="number" name="age" id="student-age" placeholder="Enter your age" class="required">
     </div>
     <div>
       <label for="student-phone">Phone:</label>
-      <input type="tel" name="phone" id="student-phone" placeholder="Enter your phone" class="required" value="+37064565454">
+      <input type="tel" name="phone" id="student-phone" placeholder="Enter your phone" class="required">
     </div>
     <div>
       <label for="student-email">Email:</label>
-      <input type="email" name="email" id="student-email" placeholder="Enter your email" class="required" value="elpastas@pastas.lt">
+      <input type="email" name="email" id="student-email" placeholder="Enter your email" class="required">
     </div>
     <div>
       <label for="student-it-knowledge">IT Knowledge:</label>
-      <input type="range" name="it-knowledge" id="student-it-knowledge" min="1" max="10" value="5" step="1">
+      <input type="range" name="it-knowledge" id="student-it-knowledge" min="1" max="10" step="1">
       <output id="it-knowledge-output">5</output>
     </div>
     <fieldset>
@@ -54,7 +54,7 @@
       <input type="checkbox" name="interest" id="interest4" value="C#">
       <label for="interest4">C#</label>
     </fieldset>
-    <input type="submit">
+    <input type="submit" class="submitStudent">
   </form>
   <span id="alert"></span>
   <div id="students-list"></div>
