--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <input type="range" name="it-knowledge" id="student-it-knowledge" min="1" max="10" step="1">
       <output id="it-knowledge-output">5</output>
     </div>
-    <fieldset>
+    <fieldset class="groupType">
       <legend>Group:</legend>
       <input type="radio" name="group" id="student-group-1" value="type 1" checked>
       <label for="student-group-1">TYPE 1 gr.</label>
@@ -42,6 +42,30 @@
       <label for="student-group-2">TYPE 2 gr.</label>
       <input type="radio" name="group" id="student-group-3" value="type 3">
       <label for="student-group-3">TYPE 3 gr.</label>
+      <input type="radio" name="group" id="student-group-4" value="type 4" >
+      <label for="student-group-4">TYPE 4 gr.</label>
+      <input type="radio" name="group" id="student-group-5" value="type 5">
+      <label for="student-group-5">TYPE 5 gr.</label>
+      <input type="radio" name="group" id="student-group-6" value="type 6">
+      <label for="student-group-6">TYPE 6 gr.</label>
+      <input type="radio" name="group" id="student-group-7" value="type 7">
+      <label for="student-group-7">TYPE 7 gr.</label>
+      <input type="radio" name="group" id="student-group-8" value="type 8">
+      <label for="student-group-8">TYPE 8 gr.</label>
+      <input type="radio" name="group" id="student-group-9" value="type 9">
+      <label for="student-group-9">TYPE 9 gr.</label>
+      <input type="radio" name="group" id="student-group-10" value="type 10">
+      <label for="student-group-10">TYPE 10 gr.</label>
+      <input type="radio" name="group" id="student-group-11" value="type 11">
+      <label for="student-group-11">TYPE 11 gr.</label>
+      <input type="radio" name="group" id="student-group-12" value="type 12">
+      <label for="student-group-12">TYPE 12 gr.</label>
+      <input type="radio" name="group" id="student-group-13" value="type 13">
+      <label for="student-group-13">TYPE 13 gr.</label>
+      <input type="radio" name="group" id="student-group-14" value="type 14">
+      <label for="student-group-14">TYPE 14 gr.</label>
+      <input type="radio" name="group" id="student-group-15" value="type 15">
+      <label for="student-group-15">TYPE 15 gr.</label>
     </fieldset>
     <fieldset>
       <legend>Interests:</legend>
@@ -53,6 +77,10 @@
       <label for="interest3">C++</label>
       <input type="checkbox" name="interest" id="interest4" value="C#">
       <label for="interest4">C#</label>
+      <input type="checkbox" name="interest" id="interest5" value="SQL">
+      <label for="interest5">SQL</label>
+      <input type="checkbox" name="interest" id="interest6" value="TypeScript">
+      <label for="interest6">TypeScript</label>
     </fieldset>
     <input type="submit" class="submitStudent">
   </form>
